@@ -5,7 +5,8 @@ CHANGELOG
 	0.4.1.5
 	Jun 28, 2009
 
-	* extra/tablature.py: Fixed bug in from_Suite.
+	* extra/tablature.py: Fixed bug in from_Suite, added add_headers (closes
+	issue #62)
 
 ================================================================================
 
